# CatMusic

./: .gitignore  DEVELOPMENT_OUTLINE.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  main.rs
src-tauri/src/audio/: device.rs  features.rs  loopback.rs  mod.rs  ring_buffer.rs  runtime.rs  smoothing.rs  source.rs
src-tauri/src/bridge/: commands.rs  dto.rs  events.rs  mod.rs
src-tauri/src/config/: schema.rs  store.rs
src-tauri/src/diagnostics/: logging.rs
src-tauri/src/platform/windows/: desktop_shell.rs  mod.rs  startup.rs
src-tauri/src/window/: desktop_host.rs  floating.rs  mod.rs  monitor.rs  tray.rs
src/debug/: debug-page.ts
src/ipc/: commands.ts  events.ts  types.ts
src/settings/: settings-page.ts  settings-store.ts  settings-view.ts
src/styles/: main.css
src/visualizer/: animation-registry.ts  ring-animation.ts  solid-spectrum-circle-animation.ts  visualizer-page.ts
