[package]
name = "catmusic"
version = "0.1.0"
description = "Windows desktop music visualizer"
authors = ["CatMusic Contributors"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "CatMusic"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aubio = { version = "0.2.1", features = ["builtin"] }
tauri = { version = "2", features = ["tray-icon"] }
windows-core = "0.61.2"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Variant",
] }
